# mongolite

./: .gitignore  Cargo.toml  README.md
src/: connection_manager.rs  errors.rs  main.rs
src/components/: collection_selector.rs  connection_manager.rs  database_selector.rs  mod.rs  query_builder.rs  results_view.rs  status_bar.rs  tab.rs  widgets.rs
src/models/: connection_profile.rs  mod.rs  mongodb_client.rs
src/services/: database_service.rs  mod.rs  query_service.rs
src/theme/: mod.rs
src/utils/: encryption.rs  error.rs
