[package]
name = "mongodb-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.22.0"
egui = "0.22.0"
mongodb = "2.5.0"
tokio = { version = "1.28.0", features = ["full", "rt-multi-thread"] }
futures-util = "0.3.30"
serde_json = "1.0"
rusqlite = { version = "0.28.0", features = ["bundled"] }
chrono = "0.4"
thiserror = "1.0.61"
hex = "0.4.3"
rand = "0.8.5"
cbc = "0.1.2"
aes = "0.8.4"
serde = "1.0.203"
log = "0.4.22"
uuid = "1.9.1"
